--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Text-Trac
 
 
+    Add --force flag to the command line script to overwrite exisiting file.
     Default of script/trac2html is to exclude class=""
 
 0.18 2015.04.05
